Issue #1047 Download-Artifacts folder rename fails as folder is probably blocked by anti virus - add retry
Added Database options to CreateScript / New-BcContainerWizard
Add support for configuration file C:\ProgramData\NavContainerHelper\NavContainerHelper.config.json to allow for global configurations (bcartifactsCacheFolder for now)

0.7.0.10
Issue #1043 Removal of AAD application needs to use case insensitive search
Check that artifactUrl exists as a variable before using it when replacing NavServerContainer
Add parameter SkipDatabase to New-BcImage to create an image without a database (faster if the image is always used with a .bak file or foreign database server)
Issue 1057 add parameter ShowMyCode to Get-NavContainerRuntimePackage
Add artifactUrl parameter to Replace-NavServerContainer
Add function New-BcContainerWizard to invoke script generator script

0.7.0.9
Issue #1042 Ensure that dotnetcore prerequisite is downloaded before starting the container
Issue #1047 Increase download timeout to 300 seconds for each artifact and prerequisite
Add timeout parameter to Download-File and Download-Artifacts

0.7.0.8
Issue #1038 Ensure that Download-Artifacts is more resilient towards exceptions or user cancellations during artifact expansion.
Avoid returning platform artifacts as localizations (if you don't specify country)
Ensure that the latest generic image is pulled when building an image with New-BcImage

0.7.0.7
Require generic 0.1.0.5 to support unexpected restarts during artifact copy
Write out time spend during image build
If tag isn't specified when auto-building image, add a tag corresponding to the bC version instead of :latest
Bugfix: Download-Artifacts couldn't download insider artifacts without a platform tag (build 17.0.14185.0 and later)

0.7.0.6
Remove parameter UseArtifacts from New-NavContainer
Add a test in Download-Artifacts to check the validity of Sas Token